--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
         "makeModel-Controller-Migration": "php artisan make:model Test -mcr",
         "RunPHPCommand": " php artisan tinker ",
         "CreatePass": "echo bcrypt('12345')",
-        "CreateMigration": "php artisan make:migration testDatabase",
+        "CreateMigration": "php artisan make:migration admin_histories",
         "makeMigration": "php artisan migrate",
-        "makeOnlyMigration": "php artisan migrate --path=database/migrations/2023_11_15_072247_updateproduct.php",
+        "makeOnlyMigration": "php artisan migrate --path=database/migrations/2025_03_03_154335_admin_histories.php",
         "makeFormRequest": "php artisan make:request Menu/CreateFormRequest",
         "list": "php artisan route:list",
         "storage": "php artisan storage:link",
